@@ -1,5 +1,6 @@
 == Changelog ==
 = 1.7.2 =
+* Feature: Now is possible to use %pwb-brand% in the product URLs
 * Fix: Some php notices and warnings fixed
 * Fix: Don't show brand description/banner on pages
 = 1.7.1 =
